deployments/dev/envoy.yaml
static_resources:
  listeners:
    - name: rest_serve_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9100
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                - name: envoy.access_loggers.file
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: /dev/stdout
                codec_type: auto
                upgrade_configs:
                  - upgrade_type: websocket
                stat_prefix: ingress_http
                use_remote_address: true
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: rest_serve
                      domains:
                        - "localhost:9100"
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: rest_serve_cluster
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: rest_serve_cluster
      connect_timeout: 0.5s
      type: STRICT_DNS
      http_protocol_options: {}
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: rest_serve
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: rest_serve_1
                      port_value: 8100
